--- a/docker/Dockerfile.labindex
+++ b/docker/Dockerfile.labindex
@@ -5,6 +5,33 @@ EXPOSE 3000
 ENV CGO_ENABLED=0
 ENV GOPATH=/go
 ENV GOCACHE=/root/.cache/go-build
+ENV GOSU_VERSION 1.17
+RUN set -eux; \
+	\
+	apk add --no-cache --virtual .gosu-deps \
+		ca-certificates \
+		dpkg \
+		gnupg \
+	; \
+	\
+	dpkgArch="$(dpkg --print-architecture | awk -F- '{ print $NF }')"; \
+	wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$dpkgArch"; \
+	wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$dpkgArch.asc"; \
+	\
+# verify the signature
+	export GNUPGHOME="$(mktemp -d)"; \
+	gpg --batch --keyserver hkps://keys.openpgp.org --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4; \
+	gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu; \
+	gpgconf --kill all; \
+	rm -rf "$GNUPGHOME" /usr/local/bin/gosu.asc; \
+	\
+# clean up fetch dependencies
+	apk del --no-network .gosu-deps; \
+	\
+	chmod +x /usr/local/bin/gosu; \
+# verify that the binary works
+	gosu --version; \
+	gosu nobody true
 
 WORKDIR /go/src/github.com/cydave/oauth-labs/labindex/
 
@@ -21,12 +48,13 @@ FROM golang:1.23.2-alpine3.19 AS final
 WORKDIR /app
 
 COPY --from=build /app/server /app/server
+COPY --from=build /usr/local/bin/gosu /usr/local/bin/gosu
+COPY ./docker/entrypoint.sh /docker-entrypoint.sh
 
-RUN addgroup -S user \
+RUN addgroup -S user -g 1000 \
     && adduser -S user -G user -u 1000 \
-    && chown -R user:user /app
+    && chown -R user:user /app \
+    && chown root:root /docker-entrypoint.sh \
+    && chmod 755 /docker-entrypoint.sh
 
-USER user
-
-CMD ["/app/server", "/app/config.yaml"]
-
+ENTRYPOINT ["/docker-entrypoint.sh"]
